# python_lambdas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_DOCKER.md  SETUP_CHECKLIST.md  SHARED_LAYER.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
infra/terraform/: README.md  ecr.tf  lambda.tf  lambda_zip.tf  main.tf  outputs.tf  tfplan  variables.tf
libs/common/: models.py  pyproject.toml
libs/common/src/: __init__.py  logger.py  models.py
scripts/: README_ZIP_BUILD.md  build.py  build_all.py  build_zip.py  deploy.py  test.py
services/idp_api/: Dockerfile  README.md  __init__.py  handler.py  pyproject.toml  service.py
services/idp_api/src/: __init__.py  handler.py  models.py  service.py
services/idp_api/tests/integration/: test_integration.py
services/idp_api/tests/unit/: __init__.py  test_handler.py  test_service.py
services/player_account_api/: Dockerfile  README.md  handler.py  pyproject.toml  service.py
services/player_account_api/src/: __init__.py  handler.py  models.py  service.py
services/player_account_api/tests/integration/: __init__.py  test_integration.py
services/player_account_api/tests/unit/: __init__.py  test_handler.py  test_service.py
src/: __init__.py
src/lambdas/idp_api/: handler.py  models.py  service.py
src/lambdas/idp_api/tests/: test_handler.py  test_integration.py  test_service.py
src/lambdas/player_account_api/: __init__.py  handler.py  models.py  service.py
src/lambdas/player_account_api/tests/: __init__.py  test_handler.py  test_integration.py  test_service.py
src/libs/: __init__.py
src/libs/common/: models.py
src/services/idp_api/: README.md  handler.py  service.py
src/services/idp_api/tests/: __init__.py  test_handler.py  test_integration.py  test_service.py
src/services/idp_api/tests/integration/: __init__.py  test_integration.py
src/services/idp_api/tests/unit/: test_handler.py  test_service.py
src/services/player_account_api/: README.md  handler.py  service.py
src/services/player_account_api/tests/: test_handler.py  test_integration.py  test_service.py
src/services/player_account_api/tests/integration/: test_integration.py
src/services/player_account_api/tests/unit/: test_service.py
src/shared/: __init__.py  exceptions.py  logger.py
terraform/: README.md  api_gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
tests/e2e/: README.md  conftest.py
