[project]
name = "fips-psn-emulator-service"
version = "0.1.0"
description = "PSN Partner Emulator - Docker-based serverless tool for simulating partner API workflows"
authors = [
    {name = "PSN Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

# Root-level dependencies for development and orchestration only
# Individual Lambda dependencies are managed in their respective pyproject.toml files
dependencies = [
    "uv>=0.5.0",           # Fast Python package manager for build orchestration
    "click>=8.0.0",        # CLI interface for build/deploy scripts
    "rich>=13.0.0",        # Rich terminal output for better UX
    "pyyaml>=6.0.0",       # YAML parsing for configuration files
    "docker>=7.0.0",       # Docker Python SDK for build validation
    "gitpython>=3.1.0",    # Git operations for versioning
]

[project.optional-dependencies]
dev = [
    # Test orchestration and validation
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "moto>=5.0.0",

    # Code quality tools for root-level scripts and configuration
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "isort>=5.13.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "debugpy>=1.8.0",

    # AWS and infrastructure tools
    "boto3>=1.35.0",
    "boto3-stubs[lambda,dynamodb,s3]>=1.35.0",
    "awscli>=1.42.0",

    # Documentation and CI/CD
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "scripts/**",           # Build and deployment scripts
    "libs/*/src/**",       # Common libraries
    # Note: Individual Lambda services are built separately as Docker images
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | infra/terraform
  # Individual Lambda services have their own Black configuration
  | services/*/src
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["infra/terraform/*", ".venv/*", "build/*"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "W", "B", "C4", "UP", "ARG", "SIM", "TCH"]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
]
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "infra/terraform",
    # Individual Lambda services have their own Ruff configuration
    "services/*/src",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"**/test_*.py" = ["ARG001", "ARG002"]
"scripts/*" = ["ARG001", "ARG002"]  # Scripts may have unused arguments

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
exclude = [
    "infra/terraform",
    ".venv",
    "build",
    "dist",
    "tests",  # Exclude tests from strict mypy checking
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "services.*.models",
    "libs.common.models",
    "libs.common.src.models",
]
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "pydantic",
    "pydantic.*",
]
ignore_missing_imports = true

# Root-level pytest configuration for orchestrating tests across services
[tool.pytest.ini_options]
minversion = "8.0"
# Note: Individual services have their own testpaths configuration
# This is for root-level test orchestration only
testpaths = ["scripts"]  # Test the build and deployment scripts
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "build: Build-related tests",
    "deploy: Deployment-related tests",
]

# Coverage configuration for build scripts only
[tool.coverage.run]
source = ["scripts", "libs"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "services/*/tests/*",  # Individual services have their own coverage
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "build",
    "dist",
    # Individual Lambda services have their own security scanning
    "services/*/src",
]
skips = ["B101"]  # Allow assert statements (used in tests)

# Configuration for consolidated development workflow

# Additional tool configurations
[tool.git-cliff]
changelog_config = ".cliff.toml"
tag_pattern = "v[0-9]*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]
