[project]
name = "fips-psn-common"
version = "0.1.0"
description = "Common shared library for PSN Emulator Lambda functions"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.10.0",
    "aws-lambda-powertools>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
