[project]
name = "fips-psn-common"
version = "0.1.0"
description = "Common shared library for PSN Emulator Lambda functions"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.10.0",
    "aws-lambda-powertools>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "moto>=5.0.0",
]
